@@ -1,9 +1,9 @@
 package edu.usip.document.service;
 
 import edu.usip.document.domain.Document;
-import edu.usip.document.search.ElasticsearchDocument;
 import edu.usip.document.search.ElasticsearchDocumentService;
 import edu.usip.document.search.PdfTextExtractor;
+import edu.usip.document.search.SearchDocument;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
@@ -11,7 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @Service
 @RequiredArgsConstructor
@@ -22,23 +22,27 @@ public class DocumentIndexingJob {
     private final ElasticsearchDocumentService esService;
 
     @Async("indexingExecutor")
-    public void indexAsync(Document saved, String storagePath) {
-        try (InputStream in = Files.newInputStream(Paths.get(storagePath))) {
-            String content = textExtractor.extract(in);
-            ElasticsearchDocument esDoc = ElasticsearchDocument.builder()
-                    .id(saved.getId())
-                    .title(saved.getTitle())
-                    .author(saved.getAuthor())
-                    .degree(saved.getDegree())
-                    .defenseDate(saved.getDefenseDate())
-                    .createdAt(saved.getCreatedAt())
-                    .active(saved.isActive())
+    public void indexAsync(Document document, String storagePath) {
+        Path path = Path.of(storagePath);
+
+        try (InputStream inputStream = Files.newInputStream(path)) {
+            String content = textExtractor.extract(inputStream);
+
+            SearchDocument searchDocument = SearchDocument.builder()
+                    .id(document.getId())
+                    .title(document.getTitle())
+                    .author(document.getAuthor())
+                    .degree(document.getDegree())
+                    .defenseDate(document.getDefenseDate())
+                    .createdAt(document.getCreatedAt())
+                    .active(document.isActive())
                     .content(content)
                     .build();
-            esService.index(esDoc);
-            log.info("Documento {} indexado (async) en Elasticsearch", saved.getId());
+
+            esService.index(searchDocument);
+            log.info("Documento {} indexado correctamente en Elasticsearch", document.getId());
         } catch (Exception e) {
-            log.error("Fallo indexación async para documento {}", saved.getId(), e);
+            log.error("Error indexando documento {}", document.getId(), e);
         }
     }
 }
